commit message for site4 commit

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,212 @@
   <title>Site4</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="header">
+    <div class="header-menu">
+      <a class="header-menu-logo"><b>#pizzeria.</b></a>
+      <nav>
+        <a class="header-menu-item" href="#">menu</a>
+        <a class="header-menu-item" href="#">blog</a>
+        <a class="header-menu-item" href="#">about us</a>
+        <a class="header-menu-item" href="#">contacts</a>
+      </nav>
+    </div> <!-- header-menu -->
+    <div class="header-center-style">
+      <div class="header-title"><span><b>grand</b></span><span>opening</span></div><a href="#" class="btn-style">read more</a>
+    </div>
+  </div>
+  <div class="news">
+    
+    <div class="news-ante-title">new format</div>
+    <div class="news-content">
+      <div class="news-title">what new?</div>
+      <div class="news-text">
+        <div class="box-yellow">
+          <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+          <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+        </div>
+        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+      </div>
+    </div>
+    <div class="news-image"></div>
+  </div><!-- news -->
+  <div class="features">
+    <div class="features-item">
+      <div class="features-item-title features-item-title-number-1">new format</div>
+      <div class="features-item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci deserunt expedita magni libero, officiis a quae quibusdam facilis suscipit voluptatibus reiciendis! Velit consequatur facilis ducimus fugiat ea aliquid</div>
+    </div>
+    <div class="features-item">
+      <div class="features-item-title features-item-title-number-2">master classes</div>
+      <div class="features-item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci deserunt expedita magni libero, officiis a quae quibusdam facilis suscipit voluptatibus reiciendis! Velit consequatur facilis ducimus fugiat ea aliquid</div>
+    </div>
+    <div class="features-item">
+      <div class="features-item-title features-item-title-number-3">pizza restaurant</div>
+      <div class="features-item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci deserunt expedita magni libero, officiis a quae quibusdam facilis suscipit voluptatibus reiciendis! Velit consequatur facilis ducimus fugiat ea aliquid</div>
+    </div>
+  </div><!-- features -->
+  <div class="menu">
+    <a class="header-menu-logo"><b>#pizzeria.</b></a>
+    <div class="menu-title">our new menu</div>
+    <div class="menu-text">
+      <div class="box-yellow">
+        <div class="menu-text-item">
+          <div class="lol">
+            <div class="menu-text-item-title menu-text-item-title-1">Lorem ipsum dolor sit</div>
+            <div class="menu-text-item-price">10$</div>
+          </div>
+          <div class="menu-text-item-recipe">(Lorem ipsum dolor sit, amet consectetur adipisicing elit.)</div>
+        </div><!--menu-text-item-->
+        <div class="menu-text-item">
+          <div class="lol">
+            <div class="menu-text-item-title menu-text-item-title-2">Lorem ipsum dolor sit</div>
+            <div class="menu-text-item-price">10$</div>
+          </div>
+          <div class="menu-text-item-recipe">(Lorem ipsum dolor sit, amet consectetur adipisicing elit.)</div>
+        </div><!--menu-text-item-->
+        <div class="menu-text-item">
+          <div class="lol">
+            <div class="menu-text-item-title menu-text-item-title-3">Lorem ipsum dolor sit</div>
+            <div class="menu-text-item-price">10$</div>
+          </div>
+          <div class="menu-text-item-recipe">(Lorem ipsum dolor sit, amet consectetur adipisicing elit.)</div>
+        </div><!--menu-text-item-->
+      </div>
+      <div class="menu-text-item">
+        <div class="lol">
+          <div class="menu-text-item-title menu-text-item-title-2">Lorem ipsum dolor sit</div>
+          <div class="menu-text-item-price">10$</div>
+        </div>
+        <div class="menu-text-item-recipe">(Lorem ipsum dolor sit, amet consectetur adipisicing elit.)</div>
+      </div><!--menu-text-item-->
+    </div><!--menu-text-->
+    <div class="menu-legend">
+      <p>III - top in menu</p>
+      <p>II - sale item</p>
+      <p>I - made by shef</p>
+    </div><!--menu-legend-->
+  </div><!--menu-->
+  <div class="about-us">
+    <div class="about-us-title">about our <b>concept</b></div>
+    <div class="about-us-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit impedit cupiditate sed ratione nostrum cumque aliquam culpa natus. Animi, voluptatum aperiam temporibus sint officia quos nisi commodi a blanditiis ea.</div>
+    <nav>
+      <a href="#">pizza</a>
+      <a href="#">modern concept</a>
+      <a href="#">story from shef</a>
+      <a href="#">gallery</a>
+    </nav>
+  </div><!--about-us-->
+  <div class="masterclass">
+    <p class="masterclass-ante-title">masterclass</p>
+    <div class="masterclass-main-text">
+      <div class="masterclass-title">the recipe for the most delicious pizza dough</div>
+      <div class="masterclass-text">waiting for you!</div>
+      <div class="masterclass-date-time">
+        <p>price - 15$</p>
+        <p>12:00 - 15:00</p>
+      </div>
+    </div>
+    <a href="#" class="masterclass-post-title">apply</a>
+  </div><!--masterclass-->
+  <div class="gallery">
+    <div class="gallery-title">gallery</div>
+    <div class="gallery-img">
+      <div class="gallery-img-item-1"></div>
+      <div class="gallery-img-item-2"></div>
+      <div class="gallery-img-item-3"></div>
+    </div>
+    <a class="gallery-logo-white"><b>#pizzeria.</b></a>
+    <div class="gallery-content">
+      <div class="gallery-content-text">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, libero? Provident porro pariatur nesciunt ab assumenda alias praesentium quasi ipsa voluptatibus, qui debitis unde iure laborum accusamus dolorem accusantium magni?
+        <p>name name</p>
+      </div>
+      <div class="gallery-content-social gallery-content-text">
+        <div class="gallery-content-social-title">find us here</div>
+        <nav>
+          <a class="gallery-content-social-item" href="#"><i class="fab fa-instagram"></i></a>
+          <a class="gallery-content-social-item" href="#"><i class="fab fa-facebook-f"></i></a>
+          <a class="gallery-content-social-item" href="#"><i class="fab fa-twitter"></i></a>
+          <a class="gallery-content-social-item" href="#"><i class="fab fa-whatsapp"></i></a>
+        </nav>
+        <div class="gallery-content-social-title">ask us here</div>
+        <a class="gallery-logo"><b>www.#pizzeria.com</b></a>
+      </div>
+    </div>
+  </div><!--gallery-->
+  <div class="footer">
+    <span class="footer-about">about</span>
+    <span class="footer-menu">menu</span>
+    <span class="footer-shef">shef</span>
+    <span class="footer-contact">contact</span>
+    <span class="footer-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi voluptas officia accusamus ipsam veniam error quae laborum architecto impedit vitae? Deserunt similique eos, sapiente fuga repellat neque totam ratione! Quis.</span>
+    <nav class="footer-nav-1">
+      <p class="footer-team">team</p>
+      <p class="footer-join-us">join us</p>
+      <p class="footer-ethic">ethic</p>
+      <p class="footer-goals">goals</p>
+    </nav>
+    <nav class="footer-nav-2">
+      <p class="footer-team">team</p>
+      <p class="footer-join-us">join us</p>
+      <p class="footer-ethic">ethic</p>
+      <p class="footer-goals">goals</p>
+    </nav>
+    <nav class="footer-nav-3">
+      <p class="footer-team">team</p>
+      <p class="footer-join-us">join us</p>
+      <p class="footer-ethic">ethic</p>
+      <p class="footer-goals">goals</p>
+    </nav>
+
+
+  </div><!--footer-->
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="footer-nav">
+  <nav>
+    <a href="#">about</a>
+    <a href="#">menu</a>
+    <a href="#">shef</a>
+    <a href="#">contact</a>
+  </nav>
+</div>
+<div class="footer-text">
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio eum aliquam quos ducimus cum est, maxime sunt vitae earum illum ea neque beatae consectetur iste dolorum possimus, ab dicta quaerat!
+</div>
+<nav>
+  <a href="#">team</a>
+  <a href="#">join us</a>
+  <a href="#">ethic</a>
+  <a href="#">goals</a>
+</nav>
+<nav>
+  <a href="#">team</a>
+  <a href="#">join us</a>
+  <a href="#">ethic</a>
+  <a href="#">goals</a>
+</nav>
+<nav>
+  <a href="#">team</a>
+  <a href="#">join us</a>
+  <a href="#">ethic</a>
+  <a href="#">goals</a>
+</nav> -->
+
